sql/item_cmpfunc.h
@@ -3339,6 +3339,7 @@ public:
   Item *deep_copy(THD *thd) const override;
   bool excl_dep_on_table(table_map tab_map) override;
   bool excl_dep_on_grouping_fields(st_select_lex *sel) override;
+  bool eq(const Item *item, const Eq_config &config) const override;
 
 private:
   void merge_sub_condition(List_iterator<Item>& li);
